--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 		
 		<link href="./_app/immutable/assets/0.9068f657.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.32503cb2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0d2f49d2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1526b130.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.277c49a7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c447241a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.52a017d1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f5cea324.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b850af2d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.eb274769.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.0e9095c4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0d1a80aa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.64ae73ec.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.7a714f44.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.18066f97.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.cbe77470.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/FuncLib.bddcea64.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.65ce4d10.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ccabbe70.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/SectionContainer.66fb5677.js"><title>Home</title><!-- HEAD_svelte-153hdqe_START --><meta name="description" content="Hossin Azmoud"><!-- HEAD_svelte-153hdqe_END -->
 	</head>
 	<body data-sveltekit-prefetch
@@ -32,7 +32,7 @@
 			
 			<script>
 				{
-					__sveltekit_1sde22n = {
+					__sveltekit_1ro87rs = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -42,8 +42,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0d2f49d2.js"),
-						import("./_app/immutable/entry/app.52a017d1.js")
+						import("./_app/immutable/entry/start.1526b130.js"),
+						import("./_app/immutable/entry/app.b850af2d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
