--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,11 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-prefetch
-	class="flex flex-col items-center justify-between
+	class="flex flex-col items-center justify-center
 	 w-screen bg-slate-900 m-0 p-0 overflow-x-hidden"
 	>
-		%sveltekit.body%
+		<div style="display: contents">
+			%sveltekit.body%
+		</div>	
 	</body>
 </html>
