Add form and webhook

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moody</title>
   </head>
-  
 <body
-	class="flex flex-col items-center justify-center
-	 w-screen bg-slate-900 m-0 p-0 overflow-x-hidden"
-  >
+	class="flex items-center justify-center m-0 p-0 bg-slate-900">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
