--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Moody</title>
   </head>
 <body
-	class="flex items-center justify-center m-0 p-0 bg-slate-900">
-    <div id="app"></div>
+	class="flex flex-col items-center justify-center m-0 p-0 bg-slate-900">
+    <div id="app" class="flex flex-col items-center justify-center"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
