--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Moody</title>
   </head>
 <body
-	class="flex flex-col items-center justify-center m-0 p-0 bg-slate-900">
+	class="flex flex-col items-center justify-center m-0 p-0 bg-slate-900 transition ease-in-out duration-100">
     <div id="app" class="flex flex-col items-center justify-center"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
